--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
     "react-images-uploader": "^1.2.0-rc1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
